--- a/main.html
+++ b/main.html
@@ -4,11 +4,25 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>My CV</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<img alt="Photo" src="https://images.unsplash.com/photo-1624377632657-3902bfd35958?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" width="400px" height="200px">
+    <h1>Owayas Ahmad Dar</h1>
+	<ul>
+		<li>Java</li>
+		<li>HTML5</li>
+		<li>CSS3</li>
+	</ul>
+	<nav>
+		<ul>
+			<li>Home</li>
+			<li>About Me</li>
+			<li>Services</li></li>
+		</ul>
+	</nav>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
