--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-	<img alt="Photo" src="https://images.unsplash.com/photo-1624377632657-3902bfd35958?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" width="400px" height="200px">
-    <h1>Owayas Ahmad Dar</h1>
-	<ul>
+	<img  aria-label="photo" alt="Photo" src="https://images.unsplash.com/photo-1624377632657-3902bfd35958?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" width="400px" height="200px">
+    <h1  aria-label="Name">Owayas Ahmad Dar</h1>
+	<ul aria-label="Skills">
 		<li>Java</li>
 		<li>HTML5</li>
 		<li>CSS3</li>
 	</ul>
-	<nav>
+	<nav  aria-label="Nav Bar">
 		<ul>
 			<li>Home</li>
 			<li>About Me</li>
