--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
 	<img  role="img" alt="Photo" src="https://images.unsplash.com/photo-1624377632657-3902bfd35958?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" width="400px" height="200px">
     <h1 role="heading">Owayas Ahmad Dar</h1>
 	<ul role="list">
-		<li>Java</li>
-		<li>HTML5</li>
-		<li>CSS3</li>
+		<li role="listitem">Java</li>
+		<li role="listitem">HTML5</li>
+		<li role="listitem">CSS3</li>
 	</ul>
 	<nav role="navigation">
 		<ul>
-			<li>Home</li>
-			<li>About Me</li>
-			<li>Services</li></li>
+			<span>Home</span>
+			<span>About Me</span>
+			<span>Services</span>
 		</ul>
 	</nav>
 	<script type="text/javascript" src="./script.js">
